add figure to docs

--- a/ternary-diagram.tex
+++ b/ternary-diagram.tex
@@ -73,7 +73,7 @@ Eqn.~\ref{eqn:chempot} represents equality of chemical potential, while
 Eqn.~\ref{eqn:grandpot} represents equality of grand potential energy. This pair
 of equations can be solved to determine the two unknown compositions needed to
 specify the equilibrium tie line containing points $G_A(x_A)$, $G(x)$, and
-$G_B(x_B)$. These are similar to Nana's derivation, but in a reduced system.
+$G_B(x_B)$.
 
 \section*{Ternary Two-Phase}
 
@@ -157,8 +157,7 @@ The fourth equation comes from combining the three constraints to recover the le
 The system of Eqns.~\ref{eqn:chempot1}, \ref{eqn:chempot2}, \ref{eqn:grandpot1}
 \& \ref{eqn:lever} can be solved to determine the two unknown composition pairs
 needed to specify the equilibrium tie line containing the points
-$G_A(x_1^A,x_2^A)$, $G(x_1,x_2)$, and $G_B(x_1^B,x_2^B)$. \emph{This represents
-  the full set of equations Nana provided.}
+$G_A(x_1^A,x_2^A)$, $G(x_1,x_2)$, and $G_B(x_1^B,x_2^B)$.
 
 \newpage
 \section*{Ternary Three-Phase}
